[package]
name = "http-test-server"
version = "1.0.0"
authors = ["Vinicius Gerevini <viniciusgerevini@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/viniciusgerevini/http-test-server"
description = "Programatically create resources and pre-defined responses for tests"
keywords = ["http", "test", "server", "stream"]

[dependencies]
